// -----------------------------------------------------------------------------
// ENUMS
// -----------------------------------------------------------------------------
Enum AssignmentType {
  PLACEMENT
  PRETEST
  POSTTEST
  ASSIGNMENT
  EXERCISE
  PROJECT
}

Enum SubmissionType {
  GROUP
  INDIVIDUAL
}

Enum AssignmentItemType {
  OBJECTIVE
  ESSAY
  PROJECT
}

Enum AssignmentStatus {
  PASS
  NOT_PASS
}

Enum EnrollmentStatus {
  ACTIVE
  COMPLETED
  DROPPED
}

// -----------------------------------------------------------------------------
// TABLES
// -----------------------------------------------------------------------------

Table users {
  id integer [primary key, increment]
  email varchar [unique, not null]
  name varchar
}

Table classes {
  id integer [primary key, increment]
  title varchar [not null]
  imgUrl varchar
  hours integer
  methods varchar
  startDate timestamp
  endDate timestamp
  description varchar
  learningObjective varchar
  isDraft boolean [default: false]
  createdBy integer
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
  
  Note: 'Indexes: [createdBy], [isDraft], [startDate, endDate]'
}

Table timelines {
  id integer [primary key, increment]
  classId integer [not null]
  date timestamp [not null]
  activity varchar [not null]
  createdBy integer
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
  
  Note: 'Unique: [classId, date]'
}

Table courses {
  id integer [primary key, increment]
  classId integer [not null]
  title varchar [not null]
  description varchar
  learningObjectives varchar
  entrySkills varchar
  tools varchar
  createdBy integer
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

Table sessions {
  id integer [primary key, increment]
  courseId integer [not null]
  isSynchronous boolean
  title varchar [not null]
  content json
  schedule json
  reference json
  createdBy integer
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

Table enrollments {
  id integer [primary key, increment]
  userId integer [not null]
  classId integer [not null]
  status EnrollmentStatus [default: 'ACTIVE']
  enrolledAt timestamp [default: `now()`]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
  
  Note: 'Unique: [userId, classId]'
}

Table ses {
  enrollmentId integer [primary key]
  sessionId integer [primary key]
  score float
  scoredBy integer
  scoredAt timestamp
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

Table assignments {
  id integer [primary key, increment]
  classId integer
  courseId integer
  sessionId integer
  type AssignmentType [not null]
  submissionType SubmissionType
  duration integer
  startDate timestamp
  endDate timestamp
  description varchar
  instruction varchar
  passingGrade float
  createdBy integer
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

Table assignment_items {
  id integer [primary key, increment]
  assignmentId integer [not null]
  type AssignmentItemType [not null]
  question varchar [not null]
  options json
  correctAnswer varchar
  maxScore float
  createdBy integer
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

Table assignment_results {
  id integer [primary key, increment]
  assignmentId integer [not null]
  enrollmentId integer [not null]
  startedAt timestamp
  finishedAt timestamp
  status AssignmentStatus [default: 'NOT_PASS']
  totalScore float
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
  
  Note: 'Unique: [assignmentId, enrollmentId]'
}

Table assignment_item_results {
  id integer [primary key, increment]
  assignmentResultId integer [not null]
  assignmentItemId integer [not null]
  answer varchar
  answerFiles json
  score float
  reviewerFeedback varchar
  reviewedBy integer
  reviewedAt timestamp
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

Table groups {
  id integer [primary key, increment]
  enrollmentId integer [not null]
  name varchar
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

Table course_mappings {
  enrollmentId integer [primary key]
  courseId integer [primary key]
  progress float [default: 0]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
  deletedAt timestamp
}

// -----------------------------------------------------------------------------
// RELATIONSHIPS (FOREIGN KEYS)
// -----------------------------------------------------------------------------

// Class Relations
Ref: timelines.classId > classes.id [delete: cascade]
Ref: courses.classId > classes.id [delete: cascade]

// Course Relations
Ref: sessions.courseId > courses.id [delete: cascade]

// Enrollment Relations
Ref: enrollments.userId > users.id
Ref: enrollments.classId > classes.id

// SES (Session-Enrollment) Relations
Ref: ses.enrollmentId > enrollments.id [delete: cascade]
Ref: ses.sessionId > sessions.id [delete: cascade]

// Assignment Hierarchy Relations
Ref: assignments.classId > classes.id
Ref: assignments.courseId > courses.id
Ref: assignments.sessionId > sessions.id
Ref: assignment_items.assignmentId > assignments.id [delete: cascade]

// Result Relations
Ref: assignment_results.assignmentId > assignments.id [delete: cascade]
Ref: assignment_results.enrollmentId > enrollments.id
Ref: assignment_item_results.assignmentResultId > assignment_results.id [delete: cascade]
Ref: assignment_item_results.assignmentItemId > assignment_items.id

// Group & Mapping Relations
Ref: groups.enrollmentId > enrollments.id [delete: cascade]
Ref: course_mappings.enrollmentId > enrollments.id [delete: cascade]
Ref: course_mappings.courseId > courses.id [delete: cascade]